# cell-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  PROJECT_RULES.md  README.md  ROADMAP.md  architecture-improvement-plan.md  build.rs  cell-architecture-whitepaper.md  coverage-baseline.json  coverage-config.toml  development-plan-6.26.md  development-plan.md  strongest-constraint-plan.md
.cargo/: config.toml  mutants.toml
.githooks/: README.md  pre-commit  pre-commit.ps1
.github/workflows/: ci.yml  mutation-test.yml
.handoff/: latest.json  latest.md
crates/cell-adapters/: Cargo.toml
crates/cell-adapters/src/: ast_analyzer.rs  dashboard.html  file_decision_store.rs  file_evolution_store.rs  file_handoff_exporter.rs  file_progress_store.rs  json_handoff_exporter.rs  lib.rs  template_engine.rs  tera_code_generator.rs  web_dashboard.rs
crates/cell-application/: Cargo.toml
crates/cell-application/src/: ab_test_service.rs  agent_profile_service.rs  agent_protocol_service.rs  arch_advisor.rs  arch_fixer.rs  arch_linter.rs  arch_service.rs  arch_visualizer.rs  audit_service.rs  auto_instrumentation.rs  auto_progress_service.rs  benchmark_service.rs  canary_service.rs  ci_template_service.rs  code_review_service.rs  complexity_quota_service.rs  config_schema_validator.rs  config_service.rs  contract_service.rs  coverage_service.rs  db_migration_service.rs  decision_engine.rs  decision_service.rs  dependency_analyzer.rs  dev_env_service.rs  dev_workflow_service.rs  docs_generator_service.rs  enforcement_service.rs  entropy_bank_service.rs  entropy_config_loader.rs  entropy_service.rs  entropy_trend_service.rs  event_schema_service.rs  evolution_service.rs  fast_verify_service.rs  feature_runtime.rs  feature_service.rs  fingerprint_service.rs  generate_service.rs  git_integration_service.rs  (+28 more)
crates/cell-application/src/architecture_tests/: best_practices.rs  code_quality.rs  layer_deps.rs  mod.rs  visibility.rs
crates/cell-application/src/observability/: dashboard.rs  metrics.rs  phases.rs
crates/cell-application/src/ports/: code_generator.rs  decision_store.rs  evolution_store.rs  handoff_exporter.rs  mod.rs  progress_store.rs
crates/cell-application/src/simplicity_checker/: analysis.rs  checks.rs  format.rs  issues.rs  mod.rs  types.rs
crates/cell-domain/: Cargo.toml
crates/cell-domain/src/: ab_experiment.rs  adr.rs  arch_advisor.rs  canary_release.rs  cell_spec.rs  complexity_quota.rs  config_center.rs  config_schema.rs  context.rs  contract.rs  db_migration.rs  decision.rs  dependency_graph.rs  entropy.rs  entropy_bank.rs  entropy_config.rs  errors.rs  event_schema.rs  evolution.rs  extension.rs  feature.rs  feature_composer.rs  fingerprint.rs  graceful_degradation.rs  handoff.rs  impact_analyzer.rs  k8s_deployment.rs  lib.rs  metrics.rs  mount_manager.rs  observability.rs  pattern_library.rs  pattern_recognizer.rs  plugin_sandbox.rs  plugin_system.rs  plugin_validator.rs  progress.rs  rca_engine.rs  rca_engine_v2.rs  refactor_assistant.rs  (+7 more)
crates/cell-interfaces/: Cargo.toml
crates/cell-interfaces/src/: cli.rs  lib.rs
crates/cell-interfaces/src/commands/: ab_cmd.rs  adr_cmd.rs  agent_cmd.rs  agent_profile_cmd.rs  arch_cmd.rs  audit_cmd.rs  bench_cmd.rs  canary_cmd.rs  complexity_quota_cmd.rs  contract_cmd.rs  db_cmd.rs  decide_cmd.rs  decision_cmd.rs  dev_cmd.rs  dev_workflow_cmd.rs  diagnose_cmd.rs  docs_cmd.rs  enforcement_cmd.rs  entropy_bank_cmd.rs  entropy_cmd.rs  env_cmd.rs  event_cmd.rs  evolve_cmd.rs  feature_cmd.rs  generate_cmd.rs  git_cmd.rs  init_cmd.rs  lifecycle_cmd.rs  mesh_cmd.rs  mod.rs  pattern_cmd.rs  plugin_cmd.rs  plugin_validator_cmd.rs  project_cmd.rs  quality_cmd.rs  rca_cmd.rs  refactor_cmd.rs  review_cmd.rs  rule_cmd.rs  saga_cmd.rs  (+8 more)
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  ARCHITECT_GUIDE.md  CLI_REFERENCE.md  autonomous-agent-dev-plan.md
examples/todo-cell/: README.md  cell.yaml
scripts/: check_quality.ps1
src/: lib.rs  main.rs
src/adapters/: ast_analyzer.rs  file_decision_store.rs  file_evolution_store.rs  file_handoff_exporter.rs  file_progress_store.rs  mod.rs  template_engine.rs  web_dashboard.rs
src/application/: ab_test_service.rs  agent_profile_service.rs  agent_protocol_service.rs  arch_advisor.rs  arch_fixer.rs  arch_linter.rs  arch_service.rs  arch_visualizer.rs  architecture_tests.rs  audit_service.rs  auto_instrumentation.rs  auto_progress_service.rs  benchmark_service.rs  canary_service.rs  ci_template_service.rs  code_review_service.rs  complexity_quota_service.rs  config_schema_validator.rs  config_service.rs  contract_service.rs  coverage_service.rs  db_migration_service.rs  decision_engine.rs  decision_service.rs  dependency_analyzer.rs  dev_env_service.rs  dev_workflow_service.rs  docs_generator_service.rs  enforcement_service.rs  entropy_bank_service.rs  entropy_config_loader.rs  entropy_service.rs  entropy_trend_service.rs  event_schema_service.rs  evolution_service.rs  fast_verify_service.rs  feature_runtime.rs  feature_service.rs  fingerprint_service.rs  generate_service.rs  (+29 more)
src/application/observability/: dashboard.rs  metrics.rs  mod.rs  phases.rs
src/application/ports/: code_generator.rs  decision_store.rs  evolution_store.rs  handoff_exporter.rs  progress_store.rs
src/application/simplicity_checker/: analysis.rs  checks.rs  format.rs  mod.rs  types.rs
src/domain/: ab_experiment.rs  adr.rs  arch_advisor.rs  canary_release.rs  cell_spec.rs  complexity_quota.rs  config_center.rs  config_schema.rs  context.rs  contract.rs  db_migration.rs  decision.rs  dependency_graph.rs  entropy.rs  entropy_bank.rs  entropy_config.rs  errors.rs  event_schema.rs  evolution.rs  extension.rs  feature.rs  feature_composer.rs  fingerprint.rs  graceful_degradation.rs  handoff.rs  impact_analyzer.rs  k8s_deployment.rs  metrics.rs  mod.rs  mount_manager.rs  observability.rs  pattern_library.rs  pattern_recognizer.rs  plugin_sandbox.rs  plugin_system.rs  plugin_validator.rs  progress.rs  rca_engine.rs  rca_engine_v2.rs  refactor_assistant.rs  (+6 more)
src/interfaces/: cli.rs
src/interfaces/commands/: ab_cmd.rs  db_cmd.rs  (+46 more)
