[package]
name = "cell-adapters"
version.workspace = true
edition.workspace = true
description = "Cell Architecture - Adapters Layer (implementations of ports)"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "cell_adapters"
path = "src/lib.rs"

[dependencies]
cell-domain = { workspace = true, features = ["serde"] }
cell-application = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
