[package]
name = "cell-domain"
version.workspace = true
edition.workspace = true
description = "Cell Architecture - Domain Layer (pure, zero external dependencies)"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "cell_domain"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
indexmap = { workspace = true, features = ["serde"] }
petgraph = { workspace = true }
lazy_static = { workspace = true }
walkdir = { workspace = true }
toml = { workspace = true }
difflib = { workspace = true }
rayon = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[features]
default = []
serde = []
serde_json = []

[lints]
workspace = true
